--- a/index.html
+++ b/index.html
@@ -11,25 +11,90 @@
 	<div class="page">
 		<header class="header">
 			<logo class="logo logo_place_header">
-				<img src="./images/logo_place_header.svg">
+				<img src="./images/svg/logo_place_header.svg">
 			</logo>
 			<h1 class="title">Научиться учиться</h1>
-			<h2 class="subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#!"">Узнать ⟶</a></h2>
+			<p class="subtitle">Какие современные и эффективные <br> подходы к обучению вы можете <br> использовать в своей жизни? <a href="#!">Узнать ⟶</a></p>
 			<main-illustration class="header__main-illustration">
-				<img class="header__main-illustration" alt="two again" src="./images/two_again.png">
-				</main-illustration>
+				<img class="header__main-illustration" alt="two again" src="./images/image/two_again.png">
+			</main-illustration>
 			<square-pic class="header__square-pic"></square-pic>
 		</header>
 
 		<main class="content">
 			<section class="description">
-				<div class="description__two-columns">
-					<h1 class="brief description__two-columns_brief">Главные проблемы в обучении</h1>
-					<div class="main-text description__two-columns_main-text">
-						<p class="description__two-columns_main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-						<p class="description__two-columns_main-text_paragraph"><span class="span_accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-						<p class="description__two-columns_main-text_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+				<div class="two-columns">
+					<p class="two-columns_brief">Главные проблемы в обучении</p>
+					<div class="two-columns_main-text">
+						<p class="two-columns_main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+						<p class="two-columns_main-text_paragraph"><span class="span_accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+						<p class="two-columns_main-text_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
 					</div>
+				</div>
+			</section>
+
+			<section class="techniques">
+				<h2 class="section__title">Техники обучения</h2>
+				<p class="section__subtitle">Пять практик от Барбары Оакли</p>
+				<div class="cards">
+					<div class="cards__table_row">
+						<div class="cards__item">
+							<img class="cards__image" src="./images/image/cards-attention.png" alt="book"/>
+							<h2 class="cards__title">Два вида внимания</h2>
+							<p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+						</div>
+						<div class="cards__item">
+							<img class="cards__image" src="./images/image/cards-recall.png" alt="Recall"/>
+							<h2 class="cards__title">Recall</h2>
+							<p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+						</div>
+						<div class="cards__item">
+							<img class="cards__image" src="./images/image/cards-interliving.png" alt="Place"/>
+							<h2 class="cards__title">Интерливинг</h2>
+							<p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+						</div>
+					</div>
+					<div class="cards__table_row cards__table_row-2">
+						<div class="cards__item cards__item-2">
+							<img class="cards__image" src="./images/image/cards-question.png" alt="cube"/>
+							<h2 class="cards__title">Вопросы</h2>
+							<p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+						</div>
+						<div class="cards__item cards__item-2">
+							<img class="cards__image" src="./images/image/cards-competence.png" alt="stack of books"/>
+							<h2 class="cards__title">Иллюзия компетентности</h2>
+							<p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+						</div>
+						<div class="cards__item cards__item-2"></div>
+					</div>
+				</div>
+			</section>
+
+			<section class="video">
+				<h2 class="section__title">Видео нa TED</h2>
+				<p class="section__subtitle">Для тех, кто любит прокрастинировать</p>
+				<div class="video__iframes">
+					<iframe class="video__iframe" src="https://www.youtube.com/watch?v=arj7oStGLkU" frameborder="0" scrolling="no"></iframe>
+					<iframe class="video__iframe" src="https://www.youtube.com/watch?v=5MgBikgcWnY" frameborder="0" scrolling="no"></iframe>
+				</div>
+			</section>
+
+			<section class="section__grey">
+				<div class="oakley">
+					<div class="two-columns-1">
+						<h2 class="brief two-columns_brief">История Барбары Оакли.</h2>
+						<div class="main-text two-columns_main-text">
+							<p class="two-columns_main-text_paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+						</div>
+					</div>
+				</div>
+				<div class="feynman">
+					<div class="feynman__text">
+						<h2 class="feynman__title">Метод Фейнмана</h2>
+						<p class="feynman__subtitle">Выучить и не забыть.</p>
+					</div>
+					<a href="#!" class="feynman__link"">Подробнее ⟶</a>
+					<img class="feynman__image" alt ="Feynman image" src="./images/image/feynman.png">
 				</div>
 			</section>
 
@@ -78,18 +143,23 @@
         </div>
       </section>
 
-			<section class="feynman">
-				<div class="feynman__text">
-					<h1 class="feynman__title">Метод Фейнмана</h1>
-					<h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+			<section class="khan">
+				<div class="container">
+					<p class="khan__author">Салман Хан</p>
+					<h2 class="khan__title">Весь мир — школа</h2>
+					<p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+					<h2 class="khan__quote-author">Джордж Лукас</h2>
+					<p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
 				</div>
-				<a href="#!" class="feynman__link"">Подробнее ⟶</a>
-				<img class="feynman__image" alt ="Feynman image" src="./images/feynman.png">
+				<div class="book-container">
+					<img src="./images/image/khan-book.jpg" alt="book" class="book-pic">
+					<a href="#!" class="buy-link"">Купить книгу ⟶</a>
+				</div>
 			</section>
 
       <section class="kaufman">
         <h1 class="section__title">Принципы обучения</h1>
-        <h2 class="section__subtitle">от Джоша Кауфмана</h2>
+        <p class="section__subtitle">от Джоша Кауфмана</p>
         <div class="table">
           <div class="table__row">
             <div class="table__cell">
@@ -136,15 +206,26 @@
             </div>
           </div>
         </div>
-        <img class="triangle__image" alt = "triangle" src = "./images/kaufman-triangle.svg">
+        <img class="triangle__image" alt="triangle" src = "./images/svg/kaufman-triangle.svg">
       </section>
+
+			<section class="resources">
+				<h1 class="section__title">Принципы обучения</h1>
+				<p class="section__subtitle">от Джоша Кауфмана</p>
+				<div class="logo-zone">
+					<a href="#"><img src="./images/logo/resources-arzamas.svg" alt="Картинка"></a>
+					<a href="#"><img src="./images/logo/resources-n1.svg" alt="Картинка"></a>
+					<a href="#"><img src="./images/logo/resources-strelka.svg" alt="Картинка"></a>
+					<a href="#"><img src="./images/logo/resources-polka.svg" alt="Картинка"></a>
+				</div>
+			</section>
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_copyright">
           <logo class="logo">
-            <img src="./images/logo_place_footer.svg">
+            <img src="./images/svg/logo_place_footer.svg">
           </logo>
           <p class="footer__author">&copy; Олейник Николай(Nik)</p>
         </div>
@@ -159,9 +240,9 @@
         <div class="footer__column-social">
           <p class="footer__heading">Соцсети</p>
           <div class="footer__column-links">
-            <a href="#!" class="footer__column-link"><img src="./images/youtube_color_white.svg">YouTube</a>
-            <a href="#!" class="footer__column-link"><img src="./images/vk_color_white.svg">ВКонтакте</a>
-            <a href="#!" class="footer__column-link"><img src="./images/tiktok_color_white.svg">TikTok</a>
+            <a href="#!" class="footer__column-link"><img src="./images/svg/youtube_color_white.svg">YouTube</a>
+            <a href="#!" class="footer__column-link"><img src="./images/svg/vk_color_white.svg">ВКонтакте</a>
+            <a href="#!" class="footer__column-link"><img src="./images/svg/tiktok_color_white.svg">TikTok</a>
           </div>
         </div>
       </div>
