--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 	<div class="page">
 		<header class="header">
-			<logo class="logo logo_place_header">
-				<img src="./images/svg/logo_place_header.svg">
-			</logo>
+			<div class="logo logo_place_header">
+				<img src="./images/svg/logo_place_header.svg" alt="logo">
+			</div>
 			<h1 class="title">Научиться учиться</h1>
 			<p class="subtitle">Какие современные и эффективные <br> подходы к обучению вы можете <br> использовать в своей жизни? <a href="#!">Узнать ⟶</a></p>
 			<main-illustration class="header__main-illustration">
@@ -74,8 +74,8 @@
 				<h2 class="section__title">Видео нa TED</h2>
 				<p class="section__subtitle">Для тех, кто любит прокрастинировать</p>
 				<div class="video__iframes">
-					<iframe class="video__iframe" src="https://www.youtube.com/watch?v=arj7oStGLkU" frameborder="0" scrolling="no"></iframe>
-					<iframe class="video__iframe" src="https://www.youtube.com/watch?v=5MgBikgcWnY" frameborder="0" scrolling="no"></iframe>
+					<iframe class="video__iframe" src="https://www.youtube.com/watch?v=arj7oStGLkU" controls></iframe>
+					<iframe class="video__iframe" src="https://www.youtube.com/watch?v=5MgBikgcWnY" controls></iframe>
 				</div>
 			</section>
 
@@ -93,7 +93,7 @@
 						<h2 class="feynman__title">Метод Фейнмана</h2>
 						<p class="feynman__subtitle">Выучить и не забыть.</p>
 					</div>
-					<a href="#!" class="feynman__link"">Подробнее ⟶</a>
+					<a href="#!" class="feynman__link">Подробнее ⟶</a>
 					<img class="feynman__image" alt ="Feynman image" src="./images/image/feynman.png">
 				</div>
 			</section>
@@ -153,7 +153,7 @@
 				</div>
 				<div class="book-container">
 					<img src="./images/image/khan-book.jpg" alt="book" class="book-pic">
-					<a href="#!" class="buy-link"">Купить книгу ⟶</a>
+					<a href="#!" class="buy-link">Купить книгу ⟶</a>
 				</div>
 			</section>
 
@@ -224,9 +224,9 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_copyright">
-          <logo class="logo">
-            <img src="./images/svg/logo_place_footer.svg">
-          </logo>
+          <div class="logo">
+            <img src="./images/svg/logo_place_footer.svg" alt="logo">
+					</div>
           <p class="footer__author">&copy; Олейник Николай(Nik)</p>
         </div>
         <div class="footer__column-info">
@@ -240,9 +240,9 @@
         <div class="footer__column-social">
           <p class="footer__heading">Соцсети</p>
           <div class="footer__column-links">
-            <a href="#!" class="footer__column-link"><img src="./images/svg/youtube_color_white.svg">YouTube</a>
-            <a href="#!" class="footer__column-link"><img src="./images/svg/vk_color_white.svg">ВКонтакте</a>
-            <a href="#!" class="footer__column-link"><img src="./images/svg/tiktok_color_white.svg">TikTok</a>
+            <a href="#!" class="footer__column-link"><img src="./images/svg/youtube_color_white.svg" alt="YouTube">YouTube</a>
+            <a href="#!" class="footer__column-link"><img src="./images/svg/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a>
+            <a href="#!" class="footer__column-link"><img src="./images/svg/tiktok_color_white.svg" alt="TikTok">TikTok</a>
           </div>
         </div>
       </div>
