--- a/index.html
+++ b/index.html
@@ -104,40 +104,40 @@
         <div class="table">
           <div class="table__row">
             <div class="table__cell">
-              <div class="table__heading">86 миллиардов</div>
-              <div class="table__text">Число нейронов в мозге человека</div>
+              <h2 class="table__heading">86 миллиардов</h2>
+              <p class="table__text">Число нейронов в мозге человека</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">2.1 миллиарда</div>
-              <div class="table__text">Число нуждающихся в повышении квалификации</div>
-              <div class="table__text">Всемирный Банк, 2017</div>
+              <h2 class="table__heading">2.1 миллиарда</h2>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">1000 терабайт</div>
-              <div class="table__text">Объём памяти человека</div>
+              <h2 class="table__heading">1000 терабайт</h2>
+              <p class="table__text">Объём памяти человека</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">500 триллионов</div>
-              <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+              <h2 class="table__heading">500 триллионов</h2>
+              <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
             </div>
           </div>
           <div class="table__row">
             <div class="table__cell">
-              <div class="table__heading">420 миллионов</div>
-              <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
-              <div class="table__text">Всемирный Банк, 2017</div>
+              <h2 class="table__heading">420 миллионов</h2>
+              <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">17–20 лет</div>
-              <div class="table__text">Пик обучаемости</div>
+              <h2 class="table__heading">17–20 лет</h2>
+              <p class="table__text">Пик обучаемости</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">1885 год</div>
-              <div class="table__text">Открытие кривой забывания</div>
+              <h2 class="table__heading">1885 год</h>
+              <p class="table__text">Открытие кривой забывания</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">1889 год</div>
-              <div class="table__text">Открытие условного рефлекса</div>
+              <h2 class="table__heading">1889 год</h2>
+              <p class="table__text">Открытие условного рефлекса</p>
             </div>
           </div>
         </div>
@@ -163,46 +163,46 @@
         <div class="table">
           <div class="table__row">
             <div class="table__cell">
-              <div class="table__heading">1</div>
-              <div class="table__text">Выберите привлекательный проект.</div>
+              <h2 class="table__heading">1</h2>
+              <p class="table__text">Выберите привлекательный проект.</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">2</div>
-              <div class="table__text">Сосредоточьтесь на каком-то одном навыке.</div>
+              <h2 class="table__heading">2</h2>
+              <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">3</div>
-              <div class="table__text">Определите целевой уровень мастерства.</div>
+              <h2 class="table__heading">3</h2>
+              <p class="table__text">Определите целевой уровень мастерства.</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">4</div>
-              <div class="table__text">Разбейте навык на элементы.</div>
+              <h2 class="table__heading">4</h2>
+              <p class="table__text">Разбейте навык на элементы.</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">5</div>
-              <div class="table__text">Приготовьте всё необходимое для занятий.</div>
+              <h2 class="table__heading">5</h2>
+              <p class="table__text">Приготовьте всё необходимое для занятий.</p>
             </div>
           </div>
           <div class="table__row">
             <div class="table__cell">
-              <div class="table__heading">6</div>
-              <div class="table__text">Устраните препятствия для занятий.</div>
+              <h2 class="table__heading">6</h2>
+              <p class="table__text">Устраните препятствия для занятий.</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">7</div>
-              <div class="table__text">Выделите специальное время для занятий.</div>
+              <h2 class="table__heading">7</h2>
+              <p class="table__text">Выделите специальное время для занятий.</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">8</div>
-              <div class="table__text">Создайте быстрые петли обратной связи.</div>
+              <h2 class="table__heading">8</h2>
+              <p class="table__text">Создайте быстрые петли обратной связи.</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">9</div>
-              <div class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+              <h2 class="table__heading">9</h2>
+              <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">10</div>
-              <div class="table__text">Уделяйте внимание количеству и скорости.</div>
+              <h2 class="table__heading">10</h>
+              <p class="table__text">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
         </div>
