--- a/index.html
+++ b/index.html
@@ -229,22 +229,22 @@
 					</div>
           <p class="footer__author">&copy; Олейник Николай(Nik)</p>
         </div>
-        <div class="footer__column-info">
+        <nav class="footer__column-info">
           <p class="footer__heading">О Практикуме</p>
-          <div class="footer__column-links">
-            <a href="#!" class="footer__column-link">Главная</a>
-            <a href="#!" class="footer__column-link">Концепция</a>
-            <a href="#!" class="footer__column-link">Наставники</a>
-          </div>
-        </div>
-        <div class="footer__column-social">
+          <ul class="footer__column-links">
+            <li><a href="#!" class="footer__column-link">Главная</a></li>
+            <li><a href="#!" class="footer__column-link">Концепция</a></li>
+            <li><a href="#!" class="footer__column-link">Наставники</a></li>
+					</ul>
+        </nav>
+        <nav class="footer__column-social">
           <p class="footer__heading">Соцсети</p>
-          <div class="footer__column-links">
-            <a href="#!" class="footer__column-link"><img src="./images/svg/youtube_color_white.svg" alt="YouTube">YouTube</a>
-            <a href="#!" class="footer__column-link"><img src="./images/svg/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a>
-            <a href="#!" class="footer__column-link"><img src="./images/svg/tiktok_color_white.svg" alt="TikTok">TikTok</a>
-          </div>
-        </div>
+          <ul class="footer__column-links">
+            <li><a href="#!" class="footer__column-link"><img src="./images/svg/youtube_color_white.svg" alt="YouTube">YouTube</a></li>
+            <li><a href="#!" class="footer__column-link"><img src="./images/svg/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
+            <li><a href="#!" class="footer__column-link"><img src="./images/svg/tiktok_color_white.svg" alt="TikTok">TikTok</a></li>
+					</ul>
+        </nav>
       </div>
     </footer>
   </div>
